2015-12-31  James Fowler  <jrf12@James-Fowlers-MacBook-Pro.local>

	* Tools/bookentry/journalWin.py: Start work on main journal
	window. Defined operations as a first pass

2015-11-08  Jim Fowler  <jrf@Biblion>

	* Tools/bookentry/AJBentry.py (AJBentry.read_XML_to_Entry): Added
	read XML functions for entry class

2015-10-31  Jim Fowler  <jrf@Biblion>

	* Data/Ajb/ajb45_books.txt: Finished proofreading ajb45_books.txt

2015-10-25  Jim Fowler  <jrf@Biblion>

	* Tools/doc/theory.rst: got a lot of the theory document
	written today.

	* Tools/bookentry/xml/journalfile.xsd: Added multiple comments
	for a journal. Previous version only allowed one long comment.

2015-10-24  Jim Fowler  <jrf@Biblion>

	* Tools/journals:
	* Tools/bookentry/designer/ui_JournalSearch.ui:
	* Tools/bookentry/designer/ui_JournalEntry.ui: wrote initial
	designer for Journal entry tool.

2015-10-18  Jim Fowler  <jrf@Biblion>

	* Tools/setup.py: added validateXML to scripts list.

	* Tools/validateXML: wrote first version. Tested against existing
	schemas and testfiles.  Modified schemas and testfiles as
	necessary.

2015-10-17  Jim Fowler  <jrf@Biblion>

	* Tools/bookentry/xml/JournalFile_test.xml: Created test file
	for journalfile.xsd.  Validated both .xsd and .xml file.

	* Tools/bookentry/xml/journalfile.xsd: Started journal file
	description.

	* Data/Ajb/ajb45_books.txt: finished AJB 45 today.

2015-10-04  Jim Fowler  <jrf@Biblion>

	* Tools/bookentry/symbols.txt: added minus superscript.

2015-07-26  Jim Fowler  <jrf@Biblion>

	* Tools/ppxml: Wrote pretty print routine for XML files.  This way
	users can look at a file as well as the computer.

2015-07-25  Jim Fowler  <jrf@Biblion>

	* Data/Ajb: Began adding reviewer's names to the reviews starting
	with ajb46_books.txt starting with entry 172. A colon after the
	review signifies that I have check AJB for the reviewer's name

2015-07-11  Jim Fowler  <jrf@Biblion>

	* Tools/doc/theory.rst: Started work on documenting the format of