@@ -1,3 +1,11 @@
+2016-01-01  Jim Fowler  <jrf@Biblion>
+
+	* Tools/bookentry/journalMenus.py: added basic menus
+	to journals. Removed menus from ui_JournalSearch.ui.
+
+	* Tools/bookentry/journalWin.py (JournalSearch): Added basic
+	functions, mostly copied from mainWindow.py.
+
 2015-12-31  James Fowler  <jrf12@James-Fowlers-MacBook-Pro.local>
 
 	* Tools/bookentry/journalWin.py: Start work on main journal
